# papers-search

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
backend/: requirements.txt
backend/src/: app.py  backend_config.py  config.py  config.yaml  executors.py  flows.py  helpers.py
frontend/: app.py  requirements.txt
tests/: test_executors.py
